parser/src/test/resources/corpus/valid/09_applies_fund.ff
rule "Whole Fund" {
  applies to: fund "Beta PE Fund III"
}
