parser/src/test/resources/corpus/invalid/17_applies_no_target.ff
rule "Applies No Target" {
  applies to:
}
